--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              chvna
-bio:                'chvna's blog'
+bio:                'chvnas blog'
 description:        "a"
 reading_time:       true
 words_per_minute:   200
